--- a/package.json
+++ b/package.json
@@ -11,11 +11,7 @@
   "scripts": {
     "dev": "webpack -d --watch",
     "build": "webpack -p --progress",
-    "start": "node ./scripts/start.js",
-    "lint": "node_modules/.bin/eslint ./src/**/*.jsx",
-    "test": "node_modules/.bin/jest --env=jsdom --watch",
-    "jest": "node_modules/.bin/jest --env=jsdom",
-    "tag-and-publish": "node ./scripts/publish.js"
+    "start": "node ./scripts/start.js"
   },
   "author": "PlanGrid <opensource@plangrid.com>",
   "contributors": [
@@ -40,9 +36,7 @@
   "homepage": "https://github.com/plangrid/react-file-viewer#readme",
   "devDependencies": {
     "autoprefixer": "^7.1.0",
-    "babel-core": "^6.24.1",
     "babel-jest": "^20.0.3",
-    "babel-loader": "^7.0.0",
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-plugin-transform-es2015-classes": "^6.18.0",
     "babel-plugin-transform-es2015-object-super": "^6.6.5",
@@ -50,42 +44,20 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "6.5.0",
-    "babel-runtime": "^6.20.0",
     "chalk": "^1.1.3",
-    "css-loader": "^0.28.1",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
-    "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
-    "eslint-import-resolver-webpack": "^0.8.1",
-    "eslint-loader": "^1.7.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-react": "^7.0.1",
-    "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "inquirer": "^3.0.6",
-    "jest": "^23.6.0",
-    "node-sass": "^4.5.3",
-    "postcss-loader": "^2.0.5",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-test-renderer": "^16.6.3",
-    "sass-loader": "^6.0.5",
-    "style-loader": "^0.17.0",
-    "url-loader": "^0.5.8",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
-    "comma-separated-values": "^3.6.4",
-    "mammoth": "1.3.6",
     "pdfjs-dist": "1.8.357",
     "prop-types": "^15.5.10",
-    "react-data-grid": "^5.0.5",
-    "react-visibility-sensor": "^5.0.2",
-    "three": "0.85.2",
-    "xlsx": "^0.10.1"
+    "react-visibility-sensor": "^5.0.2"
   },
   "peerDependencies": {
     "react": "^16.6.3",
